--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome❤😘</title>
+    <title>Welcome❤</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap");
       @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
